@@ -27,7 +27,7 @@
 extern "C"
 {
   #include "z80.h"
-  unsigned char dryZ80iCode (iCode * ic);
+  float dryZ80iCode (iCode * ic);
   bool z80_assignment_optimal;
   bool should_omit_frame_ptr;
 }
